Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

21-Feb-2011 Mark Dexter
# [#24886] No save icon in article editor for new article with category level permission

21-Feb-2011 Jean-Marie Simonet
 # [#24999] The strings used for the display column in the module assignment slider are confusing. Thanks Elin and Andrea
 # [#24983] modifying Beez 20 to compatibility with RTL Thanks Mahmood and Ofer.
 # [#24996] There is no featured button in the tool bar, so no way to make multiple articles featured. Thanks Elin.
 # [#24929] Multiselect not implemented in all views. Thanks Ian and Andrea.
 # [#25008] JNO/JYES instead JSHOW/JHIDE in mod_weblinks.xml Thanks Serge and Bill.
 $ Adding mn-MN to installation langs
 
20-Feb-2011 Jean-Marie Simonet
 # [#24916] Missing class blog_children. Thanks Markus and Bill.
 # [#24915] Missing class default_children. Thanks Markus and Bill.
 
19-Feb-2011 Jean-Marie Simonet
 # [#24978] duplicate code weblink .php
 # [#24545] Stripped code in contents and custom html module. Thanks Amy and Janich.
 
18-Feb-2011 Jean-Marie Simonet
 # [#24975] JS patch for Beez5 - IE issue hide.js. Thanks Ole.
 # [#24947] Incorrect ID attribute's value in backend menu. Thanks Serge
 $ Deleted a duplicate string and corrected some extra spaces
 # [#24933] The "Ordering" form field type defaults to "0", causing accidental changes to ordering of plugins. Thanks Bernie and Bill.

17-Feb-2011 Mark Dexter
 # [#24231] JS error notices default template in IE7+8
 # [#24825] in sql file bug
 # [#24506] com_categories doesn't properly update paths of children categories when moved to a new parent
 # [#24532] Unused JDate code causing "Catchable fatal error"
 # [#24646] Send HTTP result code 503 for the offline page